--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 	<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="shortcut icon"  href="images/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Spirax" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rajdhani" rel="stylesheet">
